@@ -1,27 +1,103 @@
 ﻿<Properties>
   <MonoDevelop.Ide.Workspace ActiveConfiguration="Release" />
-  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/Components/ParticleSystems/ParticleSystem.cpp">
+  <MonoDevelop.Ide.Workbench ActiveDocument="libtitania-x3d/Titania/X3D/Base/GarbargeCollector.cpp">
     <Files>
-      <File FileName="libtitania-x3d/Titania/X3D/Components/ParticleSystems/ParticleSystem.h" Line="377" Column="18" />
-      <File FileName="libtitania-x3d/Titania/X3D/Components/ParticleSystems/ParticleSystem.cpp" Line="1017" Column="2" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/ParticleSystems/ParticleSystem.h" Line="249" Column="1" />
+      <File FileName="libtitania-x3d/Titania/X3D/Components/ParticleSystems/ParticleSystem.cpp" Line="1494" Column="5" />
+      <File FileName="libtitania-x3d/Titania/X3D/Browser/X3DBrowserContext.h" Line="496" Column="30" />
+      <File FileName="libtitania-x3d/Titania/X3D/Base/GarbageCollector.h" Line="103" Column="31" />
+      <File FileName="libtitania-x3d/Titania/X3D/Base/GarbargeCollector.cpp" Line="96" Column="5" />
     </Files>
     <Pads>
       <Pad Id="ProjectPad">
         <State expanded="True">
+          <Node name="experimental" expanded="True" />
           <Node name="Library" expanded="True">
+            <Node name="Examples" expanded="True">
+              <Node name="TreasureIsland" expanded="True">
+                <Node name="stage" expanded="True" />
+              </Node>
+            </Node>
             <Node name="Tests" expanded="True">
               <Node name="ParticleSystems" expanded="True" />
+              <Node name="Scripting" expanded="True" />
+              <Node name="Texturing" expanded="True" />
+            </Node>
+          </Node>
+          <Node name="libtitania-standard" expanded="True">
+            <Node name="Titania" expanded="True">
+              <Node name="Math" expanded="True">
+                <Node name="Geometry" expanded="True" />
+                <Node name="Numbers" expanded="True" />
+              </Node>
             </Node>
           </Node>
           <Node name="libtitania-x3d" expanded="True">
+            <Node name="share" expanded="True">
+              <Node name="titania" expanded="True">
+                <Node name="shaders" expanded="True">
+                  <Node name="ParticleSystems" expanded="True" />
+                </Node>
+                <Node name="tools" expanded="True">
+                  <Node name="library" expanded="True" />
+                </Node>
+              </Node>
+            </Node>
             <Node name="Titania" expanded="True">
               <Node name="X3D" expanded="True">
-                <Node name="Components" expanded="True" />
+                <Node name="Base" expanded="True">
+                  <Node name="GarbargeCollector.cpp" selected="True" />
+                </Node>
+                <Node name="Basic" expanded="True" />
+                <Node name="Bits" expanded="True" />
+                <Node name="Browser" expanded="True">
+                  <Node name="Geometry3D" expanded="True" />
+                  <Node name="Picking" expanded="True" />
+                </Node>
+                <Node name="Components" expanded="True">
+                  <Node name="Core" expanded="True" />
+                  <Node name="Geometry3D" expanded="True" />
+                  <Node name="Grouping" expanded="True" />
+                  <Node name="Layering" expanded="True" />
+                  <Node name="Navigation" expanded="True" />
+                  <Node name="ParticleSystems" expanded="True" />
+                  <Node name="Rendering" expanded="True" />
+                  <Node name="Shaders" expanded="True" />
+                  <Node name="Shape" expanded="True" />
+                  <Node name="Text" expanded="True" />
+                  <Node name="Time" expanded="True" />
+                </Node>
+                <Node name="JavaScript" expanded="True">
+                  <Node name="SpiderMonkey" expanded="True" />
+                </Node>
+                <Node name="Parser" expanded="True" />
+                <Node name="Prototype" expanded="True" />
+                <Node name="Rendering" expanded="True" />
               </Node>
             </Node>
           </Node>
           <Node name="Titania" expanded="True">
-            <Node name="Titania" expanded="True" />
+            <Node name="share" expanded="True">
+              <Node name="titania" expanded="True">
+                <Node name="Library" expanded="True">
+                  <Node name="Prototypes" expanded="True">
+                    <Node name="Geometry2D" expanded="True">
+                      <Node name="RoundedRectangle2D" expanded="True" />
+                    </Node>
+                  </Node>
+                </Node>
+              </Node>
+            </Node>
+            <Node name="Titania" expanded="True">
+              <Node name="Browser" expanded="True" />
+              <Node name="Configuration" expanded="True" />
+              <Node name="LibraryView" expanded="True" />
+              <Node name="MaterialEditor" expanded="True" />
+              <Node name="OutlineEditor" expanded="True">
+                <Node name="CellRenderer" expanded="True" />
+              </Node>
+              <Node name="Undo" expanded="True" />
+            </Node>
           </Node>
         </State>
       </Pad>
