@@ -599,8 +599,6 @@ X3DBaseNode::addEvent (X3DChildObject* const object, const EventPtr & event)
 void
 X3DBaseNode::addEvent ()
 {
-	__LOG__ << getTypeName () << std::endl;
-
 	isTainted (true);
 
 	if (not nodeId .time)
