@@ -1,5 +1,13 @@
 2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* X3DBaseNode.cpp:
+	* MediaStream.cpp:
+	* Viewpoint.h:
+	* Viewpoint.cpp:
+	* X3DBackgroundNode.cpp: 
+
+2014-02-07  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Traverse.h:
 	* Parser.h:
 	* X3DObject.h:
